# microporcessorwithcompiler

./: .astylerc  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.md  README.md  not.instr
apps/: calc.cpp  two_operand_asm.cpp
apps/counterPLI/: counter.v  increment.c  increment.v  increment.vcd  increment.vpi  increment.vvp  make.sh
apps/helloPLI/: hello.cpp  hello.vpi  hello.vvp
include/asminterpreter/: ASMInterpreter.hpp
include/asmtranslator/: ASMTranslator.hpp  ASMTranslatorForRegisterMachine.hpp  ASMTranslatorForStackMachine.hpp  asmtranslator.hpp
include/calc/: BinaryExpressionBuilder.hpp  BinaryOperationNode.hpp  ExpressionElementNode.hpp  NumericElementNode.cpp  NumericElementNode.hpp  lib.hpp
include/calculator/: BinaryExpressionBuilder.hpp  BinaryOperationNode.hpp  Calculator.hpp  ExpressionElementNode.hpp  NumericElementNode.hpp  Token.hpp  Tokenizer.hpp
include/registermachinevm/: Interpreter.hpp
src/: ASMTranslator.cpp  ASMTranslator.cpp.autosave  BinaryExpressionBuilder.cpp  BinaryOperationNode.cpp  calclib.cpp  main.cpp
src/asminterpreter/: ASMInterpreter.cpp
src/asmtranslator/: ASMTranslator.cpp  ASMTranslatorForRegisterMachine.cpp  ASMTranslatorForStackMachine.cpp
src/calculator/: BinaryExpressionBuilder.cpp  BinaryOperationNode.cpp  NumericElementNode.cpp  Tokenizer.cpp
src/registermachinevm/: Interpreter.cpp
